# mgikit

./: .gitignore  Cargo.toml  LICENSE  README.md  tst.sh  usage_documentation.md
bins/: mgikit
bins/glibc-2.28/: mgikit
docs/: CITATION.cff  LICENSE  README.md  _config.yml  contributors.md  index.md
docs/.github/workflows/: jekyll.yml
docs/_data/: CONTRIBUTORS.yml  affiliations.yml  footer.yml  topnav.yml
docs/_data/sidebars/: main.yml
docs/_sass/: _bootstrap_variables.scss  _custom_classes.scss  _custom_variables.scss
docs/pages/: contact_us.md  demultiplex.md  mgikit-multiqc.md  reformat.md  report.md  template.md
src/: file_utils.rs  formater.rs  hardware_resources.rs  index_dic.rs  lib.rs  lib_04012024.rs  lib_05012024.rs  lib_06012024.rs  lib_z.rs  main.rs  report_manager.rs  run_manager.rs  sample_data.rs  sample_manager.rs  samplesheet_utils.rs  samplesheet_utils_18122023.rs  sequence_utils.rs  thread_reader.rs  variables.rs
testing_data/ds01/: info.txt
testing_data/ds01/L01/: FC01_L01_R2.fastq
testing_data/expected/ds01/: sample_sheet_expected.csv
testing_data/expected/ds01/ds01-0/: FC01.L01.mgikit.general  FC01.L01.mgikit.sample_stats
testing_data/expected/ds01/ds01-1/: FC01.L01.mgikit.undetermined_barcode
testing_data/expected/ds010/: sample_sheet_expected.tsv
testing_data/expected/ds011/: sample_sheet_expected.tsv
testing_data/expected/ds013/: sample_sheet_expected.tsv
testing_data/expected/ds02/: sample_sheet_expected_proj.tsv
testing_data/expected/ds03/: sample_sheet_expected.tsv
testing_data/expected/ds04/: sample_sheet_expected.tsv
testing_data/expected/ds07/: sample_sheet_expected.tsv
testing_data/expected/ds09/: sample_sheet_expected.tsv
testing_data/expected/full_mgi_header-1/: FC01.L01.mgikit.undetermined_barcode.complete
testing_data/expected/full_mgi_header-11/: FC01.L01.mgikit.undetermined_barcode.complete
testing_data/expected/full_mgi_header-2/: FC02.L01.mgikit.sample_stats
testing_data/expected/full_mgi_header-8/: FC08.L01.mgikit.sample_stats
testing_data/expected/large_ds/: FC01.L01.mgikit.info  FC01.L01.mgikit.sample_stats  FC01.L01.mgikit.undetermined_barcode.complete  se-FC01.L01.mgikit.sample_stats
testing_data/expected_out/ds01-1/: FC01.L01.mgikit.general  FC01.L01.mgikit.info
testing_data/expected_out/ds01-2/: FC01.L01.mgikit.general
testing_data/generate_fastq/: README  README.md  ds03_samplesheet_mk.tsv  ds03_samplesheet_sb.tsv  generate_ds03.py  generate_fastq.py
testing_data/input/ds01/: sample_sheet-ds07.tsv
testing_data/input/ds010/: info.txt
testing_data/input/ds011/: info.txt
testing_data/input/ds013/: info.txt  sample_sheet.tsv
testing_data/input/ds016/: info taken from ds02  but 200 reads.txt  sample_sheet.tsv
testing_data/input/ds03/: info.txt  sample_sheet.tsv
testing_data/input/ds08/: info.txt
testing_data/input/extras_test/: BioInfo.csv
tests/: integration_test.rs
(+105 files in other folders)
