[package]
name = "mgikit"
version = "1.0.0-beta"
edition = "2021"
authors = ["Ziad Al Bkhetan <ziad.albkhetan@gmail.com>"]
repository = "https://github.com/sagc-bioinformatics/mgikit"
readme = "README.md"
keywords = ["fastq", "MGI", "demultiplexing"]

[dependencies]
flate2 = { version = "1.0.28", features = ["zlib-ng-compat"], default-features = false }
libz-sys = { version = "1.1.8", default-features = false, features = ["libc"] }
mimalloc = { version = "0.1.34", default-features = false }
combinations = "*"
itertools = "*"
chrono = "0.4"
termion = "2.0.1"
clap = "4.3.21"
memchr = "2.6.4"
libdeflater = "1.12.0"
niffler = { version = "2.5.0", default-features = false, features = ["gz"]}
walkdir = "2.4.0"
glob = "0.3.1"
log = "0.4"
env_logger = "0.10.1"
sysinfo = "0.24.0"
fastq = "0.6.0"
num_cpus = "1.16.0"
rayon = "1.10.0"

[dev-dependencies]
md5 = "0.7.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
